[workspace]

resolver = "2"

members = [
    "slosh",
    "compiler",
    "vm",
    "builtins",
    "compile_state",
    "shell",
    "bridge_macros",
    "bridge_types",
    "bridge_adapters",
    "legacy",
]

[profile.release]
lto = true
codegen-units = 1
#opt-level = 'z'
#debug = true
panic = "abort"

[profile.bench]
debug = true

[workspace.dependencies]
bridge_types = { path = "bridge_types" }
regex = "1"
lazy_static = "1"

