[workspace]

resolver = "2"

members = [
    "slosh",
    "slosh_lib",
    "compiler",
    "vm",
    "builtins",
    "compile_state",
    "shell",
    "bridge_macros",
    "bridge_types",
    "bridge_adapters",
    "lisp_test",
]

exclude = [ "legacy" ]

[profile.release]
lto = true
codegen-units = 1
#opt-level = 'z'
#debug = true
panic = "abort"

[profile.bench]
debug = true

[workspace.dependencies]
bridge_types = { path = "bridge_types" }
compile_state = { path = "compile_state" }
sl-compiler = { path = "compiler" }
compiler_test_utils = { path = "compiler/test_utils" }
slvm = { path = "vm" }
regex = "1"
lazy_static = "1"

