[workspace]

resolver = "2"

members = [
    "slosh",
    "slosh_lib",
    "compiler",
    "vm",
    "builtins",
    "compile_state",
    "shell",
    "bridge_macros",
    "bridge_types",
    "bridge_adapters",
    "slosh_test",
    "slosh_test_lib",
]

exclude = ["legacy"]

[profile.release]
lto = true
codegen-units = 1
#opt-level = 'z'
#debug = true
panic = "abort"

[profile.bench]
debug = true

[workspace.package]
version = "0.11.1"

[workspace.dependencies]
bridge_types = { path = "bridge_types" }
compile_state = { path = "compile_state" }
sl-compiler = { path = "compiler" }
compiler_test_utils = { path = "compiler/test_utils" }
slvm = { path = "vm" }
shell = { path = "shell" }
regex = "1"
lazy_static = "1"
mdbook = "0.4.37"

unicode-width = "0.2"
unicode_reader = "1"
unicode-segmentation = "1.12"
glob = "0.3"
cfg-if = "1.0"
nix = "0.29"
chrono = "0.4.38"

static_assertions = "1.1.0"
rand = "0.8.5"
walkdir = "2.5.0"
same-file = "1.0.6"
trybuild = "1.0.101"
tempfile = "3"
temp-env = "0.3.6"
syn = "1.0.109"
quote = "1.0.37"
env_logger = "0.11.5"
criterion = "0.5"
iai-callgrind = "0.14"
