[package]
name = "bridge_macros"
version.workspace = true
edition = "2021"


[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
static_assertions = { workspace = true }
bridge_types = { workspace = true }
slvm = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
