[package]
name = "builtins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slvm = { workspace = true }
compile_state = { workspace = true }
shell = { workspace = true }
sl-compiler = { workspace = true }
bridge_adapters = { path = "../bridge_adapters" }
unicode-segmentation = { workspace = true }
unicode_reader = { workspace = true }
bridge_types = { workspace = true }
bridge_macros = { path = "../bridge_macros" }
static_assertions = { workspace = true }
rand = { workspace = true }
walkdir = { workspace = true }
same-file = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
