[package]
name = "builtins"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slvm = { workspace = true }
compile_state = { workspace = true }
shell = { workspace = true }
sl-compiler = { workspace = true }
bridge_adapters = { path = "../bridge_adapters" }
unicode-segmentation = { workspace = true }
unicode_reader = { workspace = true }
bridge_types = { workspace = true }
bridge_macros = { path = "../bridge_macros" }
static_assertions = { workspace = true }
rand = { workspace = true }
walkdir = { workspace = true }
same-file = { workspace = true }
glob = { workspace = true }
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
trybuild = { workspace = true }
