[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sl-liner = { git = "https://github.com/sl-sh-dev/sl-liner.git" }
nix = { workspace = true, features = [
    "signal",
    "process",
    "term",
    "user",
    "fs",
    "hostname",
] }
glob = { workspace = true }
cfg-if = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
