[package]
name = "shell"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sl-liner = { git = "https://github.com/sl-sh-dev/sl-liner.git" }
nix = { workspace = true, features = [
    "signal",
    "process",
    "term",
    "user",
    "fs",
    "hostname",
] }
glob = { workspace = true }
cfg-if = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
