[package]
name = "slosh-fuse"
version.workspace = true
edition = "2024"

[dependencies]
fuser = "0.14"
libc = "0.2"
log = "0.4"
env_logger = "0.11"

# Local slosh dependencies
slosh_lib.workspace = true
slvm.workspace = true
compile_state.workspace = true

[dependencies.nix]
version = "0.27"
features = ["signal", "process", "fs"]