[package]
name = "slosh"
version = "0.10.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lisp-test = ["dep:regex", "dep:lazy_static"]

[dependencies]
unicode_reader = "1"
sl-compiler = { path = "../compiler" }
bridge_adapters = { path = "../bridge_adapters" }
sl-liner = { git = "https://github.com/sl-sh-dev/sl-liner.git" }
slvm = { path = "../vm" }
builtins = { path = "../builtins" }
compile_state = { path = "../compile_state" }
shell = { path = "../shell" }
unicode-width = "0.1"
glob = "0.3"

# lisp-test dependencies
regex = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }

[dev-dependencies]
tempdir = "0.3.7"
temp-env = "0.3.6"
regex = { workspace = true }
lazy_static = { workspace = true }
criterion = "0.5"
iai-callgrind = "0.10.2"

[build-dependencies]
chrono = "0.4.7"

[[bench]]
name = "all"
harness = false
