[package]
name = "slosh"
version = "0.10.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode_reader = "1"
sl-compiler = { workspace = true }
bridge_adapters = { path = "../bridge_adapters" }
slosh_lib = { path = "../slosh_lib" }
sl-liner = { git = "https://github.com/sl-sh-dev/sl-liner.git" }
slvm = { workspace = true }
builtins = { path = "../builtins" }
compile_state = { workspace = true }
shell = { path = "../shell" }
unicode-width = "0.1"
glob = "0.3"

[dev-dependencies]
tempdir = "0.3.7"
temp-env = "0.3.6"
regex = { workspace = true }
lazy_static = { workspace = true }
criterion = "0.5"
iai-callgrind = "0.10.2"
bench_utils = { path = "bench_utils" }
compiler_test_utils = { workspace = true }
mdbook = { workspace = true }


[build-dependencies]
chrono = "0.4.7"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
