[package]
name = "slosh"
version.workspace = true
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
lisp-test = ["dep:regex", "dep:lazy_static", "dep:mdbook", "dep:env_logger"]

[dependencies]
unicode_reader = { workspace = true }
sl-compiler = { workspace = true }
bridge_adapters = { path = "../bridge_adapters" }
slosh_lib = { path = "../slosh_lib" }
sl-liner = { git = "https://github.com/sl-sh-dev/sl-liner.git" }
slvm = { workspace = true }
builtins = { path = "../builtins" }
compile_state = { workspace = true }
shell = { path = "../shell" }
unicode-width = { workspace = true }
glob = { workspace = true }

# lisp-test dependencies
regex = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
mdbook = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
temp-env = { workspace = true }
criterion = { workspace = true }
iai-callgrind = { workspace = true }
bench_utils = { path = "bench_utils" }
compiler_test_utils = { workspace = true }
mdbook = { workspace = true }


[build-dependencies]
chrono = { workspace = true }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[[test]]
name = "lisp-scripts"
harness = false
