[package]
name = "slosh_lib"
version.workspace = true
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode_reader = { workspace = true }
sl-compiler = { workspace = true }
bridge_adapters = { path = "../bridge_adapters" }
bridge_macros = { path = "../bridge_macros" }
bridge_types = { path = "../bridge_types" }
sl-liner = { git = "https://github.com/sl-sh-dev/sl-liner.git" }
slvm = { workspace = true }
builtins = { path = "../builtins" }
compile_state = { workspace = true }
shell = { path = "../shell" }
unicode-width = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
temp-env = { workspace = true }
criterion = { workspace = true }
iai-callgrind = { workspace = true }
compiler_test_utils = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
