[package]
name = "slosh_test"
version = "0.10.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slosh_lib = { path = "../slosh_lib" }
regex = { workspace = true }
lazy_static = { workspace = true }
bridge_adapters = { path = "../bridge_adapters" }
slvm = { workspace = true }
compile_state = { workspace = true }

[dev-dependencies]
tempdir = "0.3.7"
temp-env = "0.3.6"
regex = { workspace = true }
lazy_static = { workspace = true }
sl-compiler = { workspace = true }
compiler_test_utils = { workspace = true }

[build-dependencies]
chrono = "0.4.7"
