[package]
name = "slosh_test"
version.workspace = true
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slosh_lib = { path = "../slosh_lib" }
slosh_test_lib = { path = "../slosh_test_lib" }
regex = { workspace = true }
lazy_static = { workspace = true }
bridge_adapters = { path = "../bridge_adapters" }
slvm = { workspace = true }
sl-compiler = { workspace = true }
compile_state = { workspace = true }
shell = { workspace = true }
mdbook = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
temp-env = { workspace = true }
compiler_test_utils = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
