[package]
name = "slosh_test_lib"
version.workspace = true
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slosh_lib = { path = "../slosh_lib" }
regex = { workspace = true }
lazy_static = { workspace = true }
bridge_adapters = { path = "../bridge_adapters" }
builtins = { path = "../builtins" }
slvm = { workspace = true }
sl-compiler = { workspace = true }
compile_state = { workspace = true }
shell = { workspace = true }
mdbook = {  version = "0.4", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }
temp-env = { workspace = true }
compiler_test_utils = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
