[package]
name = "slvm"
version = "0.1.0"
authors = ["Steven Stanfield <stanfield@scarecrowtech.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gc = []
nohelmet = []

[dependencies]
unicode-segmentation = "1.10.1"
bridge_types = { workspace = true }
