[package]
name = "mdbook-slosh-eval"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
semver = "*"
mdbook = "*"
anyhow = "*"
serde_json = "*"
env_logger = "*"
log = "*"
pulldown-cmark = "0.10.2"
pulldown-cmark-to-cmark = "13.0.0"
slosh_lib = { path = "../../slosh_lib" }
slosh_test_lib = { path = "../../slosh_test_lib" }
builtins = { path = "../../builtins" }
compile_state = { path = "../../compile_state" }
bridge_adapters = { path = "../../bridge_adapters" }
slvm = { path = "../../vm" }
sl-compiler = { path = "../../compiler" }
toml = "=0.5.11"

[build-dependencies]
chrono = "0.4.38"

[workspace]
