[package]
name = "mdbook-slosh-eval"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
semver = "*"
mdbook-preprocessor = "0.5"
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "*"
log = "*"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "21"
slosh_lib = { path = "../../slosh_lib" }
slosh_test_lib = { path = "../../slosh_test_lib" }
builtins = { path = "../../builtins" }
compile_state = { path = "../../compile_state" }
bridge_adapters = { path = "../../bridge_adapters" }
slvm = { path = "../../vm" }
sl-compiler = { path = "../../compiler" }

[build-dependencies]
chrono = "0.4.38"

[workspace]
