[package]
name = "bench_utils"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sl-compiler = { workspace = true }
slvm = { workspace = true }
compile_state = { workspace = true }
slosh_lib = { path = "../../slosh_lib" }
slosh_test_lib = { path = "../../slosh_test_lib" }
